Bug 103481 - SIGABRT on exit (UnknownModuleException from SfxNotebookBar::ShowMenubar unexpected in sd::ViewShellBase::~ViewShellBase) in embedded presentation
Summary: SIGABRT on exit (UnknownModuleException from SfxNotebookBar::ShowMenubar unex...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2016-10-25 07:26 UTC by Stephan Bergmann
Modified: 2016-11-08 09:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test document (16.66 KB, application/vnd.oasis.opendocument.text)
2016-10-25 07:26 UTC, Stephan Bergmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Bergmann 2016-10-25 07:26:00 UTC
Created attachment 128234 [details]
test document

With recent master, start LO to open the attached embedded-presentation.odt, double-click into the embedded presentation (so it becomes editable, the control panels around the document change from Writer to Impress), then "File - Exit LibreOffice" (and confirm "Don't Save" if necessary prior to <> "").

Causes SIGABRT due to unexpected com::sun::star::frame::UnknownModuleException at

> #0  0x00007ffff73906f5 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
> #1  0x00007ffff73922fa in __GI_abort () at abort.c:89
> #2  0x00007ffff6a3d50d in __gnu_cxx::__verbose_terminate_handler() () at ../../../../libstdc++-v3/libsupc++/vterminate.cc:95
> #3  0x00007ffff6a3b2b6 in __cxxabiv1::__terminate(void (*)()) (handler=<optimized out>) at ../../../../libstdc++-v3/libsupc++/eh_terminate.cc:47
> #4  0x00007ffff6a3b301 in std::terminate() () at ../../../../libstdc++-v3/libsupc++/eh_terminate.cc:57
> #5  0x00007ffff6a3b316 in __cxxabiv1::__unexpected(void (*)()) (handler=<optimized out>) at ../../../../libstdc++-v3/libsupc++/eh_terminate.cc:63
> #6  0x00007ffff6a3af42 in __cxxabiv1::__cxa_call_unexpected(void*) (exc_obj_in=0x9f87460) at ../../../../libstdc++-v3/libsupc++/eh_personality.cc:759
> #7  0x00007fff293d7949 in sd::ViewShellBase::~ViewShellBase() (this=0x982e620) at sd/source/ui/view/ViewShellBase.cxx:312
> #8  0x00007fff29397d04 in sd::ImpressViewShellBase::~ImpressViewShellBase() (this=0x982e620) at sd/source/ui/view/ImpressViewShellBase.cxx:68
> #9  0x00007fff29397d69 in sd::ImpressViewShellBase::~ImpressViewShellBase() (this=0x982e620) at sd/source/ui/view/ImpressViewShellBase.cxx:66
> #10 0x00007ffff2acdd50 in SfxViewFrame::ReleaseObjectShell_Impl() (this=0x9829d10) at sfx2/source/view/viewfrm.cxx:981
> #11 0x00007ffff2ad021c in SfxViewFrame::~SfxViewFrame() (this=0x9829d10) at sfx2/source/view/viewfrm.cxx:1351
> #12 0x00007ffff2ad0669 in SfxViewFrame::~SfxViewFrame() (this=0x9829d10) at sfx2/source/view/viewfrm.cxx:1345
> #13 0x00007ffff2ace31f in SfxViewFrame::Close() (this=0x9829d10) at sfx2/source/view/viewfrm.cxx:1033
> #14 0x00007ffff2a93dbb in SfxFrame::DoClose_Impl() (this=0x9829f00) at sfx2/source/view/frame.cxx:167
> #15 0x00007ffff2ab864d in SfxBaseController::dispose() (this=0x7fff28a3ae08) at sfx2/source/view/sfxbasecontroller.cxx:1041
> #16 0x00007fff292db695 in sd::DrawController::dispose() (this=0x7fff28a3ae08) at sd/source/ui/unoidl/DrawController.cxx:166
> #17 0x00007fffb3aa1a95 in (anonymous namespace)::Frame::setComponent(com::sun::star::uno::Reference<com::sun::star::awt::XWindow> const&, com::sun::star::uno::Reference<com::sun::star::frame::XController> const&) (this=0x7fff2b082830, xComponentWindow=empty uno::Reference, xController=empty uno::Reference) at framework/source/services/frame.cxx:1586
> #18 0x00007fffb3aa453c in (anonymous namespace)::Frame::close(unsigned char) (this=0x7fff2b082830, bDeliverOwnership=1 '\001') at framework/source/services/frame.cxx:1801
> #19 0x00007fffa053c4c5 in DocumentHolder::CloseFrame() (this=0x7fffb0bfe190) at embeddedobj/source/general/docholder.cxx:224
> #20 0x00007fffa050415e in OCommonEmbeddedObject::Deactivate() (this=0x7fffb0b27918) at embeddedobj/source/commonembedding/embedobj.cxx:111
> #21 0x00007fffa0505653 in OCommonEmbeddedObject::SwitchStateTo_Impl(int) (this=0x7fffb0b27918, nNextState=1) at embeddedobj/source/commonembedding/embedobj.cxx:293
> #22 0x00007fffa05069da in OCommonEmbeddedObject::changeState(int) (this=0x7fffb0b27918, nNewState=1) at embeddedobj/source/commonembedding/embedobj.cxx:467
> #23 0x00007ffff2aa7f44 in SfxInPlaceClient::SetObjectState(int) (this=0x4699870, nState=1) at sfx2/source/view/ipclient.cxx:657
> #24 0x00007ffff2aa7924 in SfxInPlaceClient::SetObject(com::sun::star::uno::Reference<com::sun::star::embed::XEmbeddedObject> const&) (this=0x4699870, rObject=empty uno::Reference) at sfx2/source/view/ipclient.cxx:687
> #25 0x00007ffff2aa765e in SfxInPlaceClient::~SfxInPlaceClient() (this=0x4699870) at sfx2/source/view/ipclient.cxx:629
> #26 0x00007fffa4344aa5 in SwOleClient::~SwOleClient() (this=0x4699870) at sw/inc/swcli.hxx:30
> #27 0x00007fffa4344ac9 in SwOleClient::~SwOleClient() (this=0x4699870) at sw/inc/swcli.hxx:30
> #28 0x00007ffff2aec705 in SfxViewShell::DiscardClients_Impl() (this=0x2189b80) at sfx2/source/view/viewsh.cxx:1676
> #29 0x00007ffff2ab7f7d in SfxBaseController::dispose() (this=0x7fffb0c2f300) at sfx2/source/view/sfxbasecontroller.cxx:998
> #30 0x00007fffb3aa1a95 in (anonymous namespace)::Frame::setComponent(com::sun::star::uno::Reference<com::sun::star::awt::XWindow> const&, com::sun::star::uno::Reference<com::sun::star::frame::XController> const&) (this=0x7fffcdee8010, xComponentWindow=empty uno::Reference, xController=empty uno::Reference) at framework/source/services/frame.cxx:1586
> #31 0x00007fffb3aa453c in (anonymous namespace)::Frame::close(unsigned char) (this=0x7fffcdee8010, bDeliverOwnership=0 '\000') at framework/source/services/frame.cxx:1801
> #32 0x00007fffb3a90d25 in framework::Desktop::impl_closeFrames(bool) (this=0x7fffce0e26b0, bAllowUI=true) at framework/source/services/desktop.cxx:1698
> #33 0x00007fffb3a9028b in framework::Desktop::terminate() (this=0x7fffce0e26b0) at framework/source/services/desktop.cxx:230
> #34 0x00007fffb397662b in framework::CloseDispatcher::implts_terminateApplication() (this=0x7fff2b061ab0) at framework/source/dispatch/closedispatcher.cxx:562
> #35 0x00007fffb397578d in framework::CloseDispatcher::impl_asyncCallback(LinkParamNone*) (this=0x7fff2b061ab0) at framework/source/dispatch/closedispatcher.cxx:410
> #36 0x00007fffb3973e48 in framework::CloseDispatcher::LinkStubimpl_asyncCallback(void*, LinkParamNone*) (instance=0x7fff2b061ab0, data=0x0) at framework/source/dispatch/closedispatcher.cxx:254
> #37 0x00007fffedd043f8 in Link<LinkParamNone*, void>::Call(LinkParamNone*) const (this=0x8161358, data=0x0) at include/tools/link.hxx:84
> #38 0x00007fffee147198 in vcl::EventPoster::DoEvent_Impl(void*) (this=0x8161350) at vcl/source/helper/evntpost.cxx:52
> #39 0x00007fffee147158 in vcl::EventPoster::LinkStubDoEvent_Impl(void*, void*) (instance=0x8161350, data=0x0) at vcl/source/helper/evntpost.cxx:48
> #40 0x00007fffedc763f8 in Link<void*, void>::Call(void*) const (this=0x84b9958, data=0x0) at include/tools/link.hxx:84
> #41 0x00007fffedc7361c in ImplHandleUserEvent(ImplSVEvent*) (pSVEvent=0x84b9950) at vcl/source/window/winproc.cxx:1946
> #42 0x00007fffedc709f0 in ImplWindowFrameProc(vcl::Window*, SalEvent, void const*) (_pWindow=0x19c17d0, nEvent=SalEvent::UserEvent, pEvent=0x84b9950) at vcl/source/window/winproc.cxx:2496
> #43 0x00007fffee32fa4e in SalFrame::CallCallback(SalEvent, void const*) const (this=0x19c21e0, nEvent=SalEvent::UserEvent, pEvent=0x84b9950) at vcl/inc/salframe.hxx:280
> #44 0x00007fffee344608 in SalGenericDisplay::DispatchInternalEvent() (this=0x15c3990) at vcl/unx/generic/app/gendisp.cxx:86
> #45 0x00007fffd2d8d7ea in GtkData::userEventFn(void*) (data=0x73e260) at vcl/unx/gtk3/gtk3gtkdata.cxx:823
> #46 0x00007fffd2d8d91b in call_userEventFn(void*) (data=0x73e260) at vcl/unx/gtk3/gtk3gtkdata.cxx:833
> #47 0x00007ffff5af86ba in g_main_context_dispatch (context=0x63a520) at gmain.c:3154
> #48 0x00007ffff5af86ba in g_main_context_dispatch (context=context@entry=0x63a520) at gmain.c:3769
> #49 0x00007ffff5af8a70 in g_main_context_iterate (context=context@entry=0x63a520, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3840
> #50 0x00007ffff5af8b1c in g_main_context_iteration (context=0x63a520, may_block=1) at gmain.c:3901
> #51 0x00007fffd2d8c404 in GtkData::Yield(bool, bool) (this=0x73e260, bWait=true, bHandleAllCurrentEvents=false) at vcl/unx/gtk3/gtk3gtkdata.cxx:479
> #52 0x00007fffd2d8fdd1 in GtkInstance::DoYield(bool, bool, unsigned long) (this=0x73e3c0, bWait=true, bHandleAllCurrentEvents=false, nReleased=0) at vcl/unx/gtk3/../gtk/gtkinst.cxx:423
> #53 0x00007fffee183d15 in ImplYield(bool, bool, unsigned long) (i_bWait=true, i_bAllEvents=false, nReleased=0) at vcl/source/app/svapp.cxx:504
> #54 0x00007fffee17ead8 in Application::Yield() () at vcl/source/app/svapp.cxx:551
> #55 0x00007fffee17ea5b in Application::Execute() () at vcl/source/app/svapp.cxx:468
> #56 0x00007ffff775e6f9 in desktop::Desktop::DoExecute() () at desktop/source/app/app.cxx:1367
> #57 0x00007ffff776084a in desktop::Desktop::Main() (this=0x7fffffffe1e8) at desktop/source/app/app.cxx:1694
> #58 0x00007fffee191199 in ImplSVMain() () at vcl/source/app/svmain.cxx:185
> #59 0x00007fffee192938 in SVMain() () at vcl/source/app/svmain.cxx:223
> #60 0x00007ffff77c876b in soffice_main() () at desktop/source/app/sofficemain.cxx:165
> #61 0x000000000040094d in sal_main () at desktop/source/app/main.c:48
> #62 0x0000000000400927 in main (argc=1, argv=0x7fffffffe528) at desktop/source/app/main.c:47

The exception is thrown at

> #0  0x00007ffff6a3b4bd in __cxxabiv1::__cxa_throw(void*, std::type_info*, void (*)(void*)) (obj=0x64ab2c0, tinfo=0x7ffff30119a0 <typeinfo for com::sun::star::frame::UnknownModuleException>, dest=0x7fffb3ab8de0 <com::sun::star::frame::UnknownModuleException::~UnknownModuleException()>) at ../../../../libstdc++-v3/libsupc++/eh_throw.cc:63
> #1  0x00007fffb3ab6a94 in (anonymous namespace)::ModuleManager::identify(com::sun::star::uno::Reference<com::sun::star::uno::XInterface> const&) (this=0x7fffcc099a38, xModule=uno::Reference to ((anonymous namespace)::Frame *) 0x7fffcdee8380) at framework/source/services/modulemanager.cxx:222
> #2  0x00007fffb3ab7ef3 in non-virtual thunk to (anonymous namespace)::ModuleManager::identify(com::sun::star::uno::Reference<com::sun::star::uno::XInterface> const&) () at framework/source/services/modulemanager.cxx:176
> #3  0x00007ffff29994c2 in sfx2::SfxNotebookBar::ShowMenubar(bool) (bShow=true) at sfx2/source/notebookbar/SfxNotebookBar.cxx:364
> #4  0x00007ffff299915c in sfx2::SfxNotebookBar::CloseMethod(SystemWindow*) (pSysWindow=0x0) at sfx2/source/notebookbar/SfxNotebookBar.cxx:168
> #5  0x00007ffff29990ba in sfx2::SfxNotebookBar::CloseMethod(SfxBindings&) (rBindings=...) at sfx2/source/notebookbar/SfxNotebookBar.cxx:157
> #6  0x00007fff6588f4f0 in sd::ViewShellBase::~ViewShellBase() (this=0x7506bd0) at sd/source/ui/view/ViewShellBase.cxx:282
> #7  0x00007fff6584fd04 in sd::ImpressViewShellBase::~ImpressViewShellBase() (this=0x7506bd0) at sd/source/ui/view/ImpressViewShellBase.cxx:68
> #8  0x00007fff6584fd69 in sd::ImpressViewShellBase::~ImpressViewShellBase() (this=0x7506bd0) at sd/source/ui/view/ImpressViewShellBase.cxx:66
> #9  0x00007ffff2acdd50 in SfxViewFrame::ReleaseObjectShell_Impl() (this=0x74f2370) at sfx2/source/view/viewfrm.cxx:981
> #10 0x00007ffff2ad021c in SfxViewFrame::~SfxViewFrame() (this=0x74f2370) at sfx2/source/view/viewfrm.cxx:1351
> #11 0x00007ffff2ad0669 in SfxViewFrame::~SfxViewFrame() (this=0x74f2370) at sfx2/source/view/viewfrm.cxx:1345
> #12 0x00007ffff2ace31f in SfxViewFrame::Close() (this=0x74f2370) at sfx2/source/view/viewfrm.cxx:1033
> #13 0x00007ffff2a93dbb in SfxFrame::DoClose_Impl() (this=0x74f2330) at sfx2/source/view/frame.cxx:167
> #14 0x00007ffff2ab864d in SfxBaseController::dispose() (this=0x7fff7409a1d0) at sfx2/source/view/sfxbasecontroller.cxx:1041
> #15 0x00007fff65793695 in sd::DrawController::dispose() (this=0x7fff7409a1d0) at sd/source/ui/unoidl/DrawController.cxx:166
> #16 0x00007fffb3aa1a95 in (anonymous namespace)::Frame::setComponent(com::sun::star::uno::Reference<com::sun::star::awt::XWindow> const&, com::sun::star::uno::Reference<com::sun::star::frame::XController> const&) (this=0x7fffcc08c530, xComponentWindow=empty uno::Reference, xController=empty uno::Reference) at framework/source/services/frame.cxx:1586
> #17 0x00007fffb3aa453c in (anonymous namespace)::Frame::close(unsigned char) (this=0x7fffcc08c530, bDeliverOwnership=1 '\001') at framework/source/services/frame.cxx:1801
> #18 0x00007fff6cedf4c5 in DocumentHolder::CloseFrame() (this=0x7fff74029ed0) at embeddedobj/source/general/docholder.cxx:224
> #19 0x00007fff6cea715e in OCommonEmbeddedObject::Deactivate() (this=0x7fff773ee528) at embeddedobj/source/commonembedding/embedobj.cxx:111
> #20 0x00007fff6cea8653 in OCommonEmbeddedObject::SwitchStateTo_Impl(int) (this=0x7fff773ee528, nNextState=1) at embeddedobj/source/commonembedding/embedobj.cxx:293
> #21 0x00007fff6cea99da in OCommonEmbeddedObject::changeState(int) (this=0x7fff773ee528, nNewState=1) at embeddedobj/source/commonembedding/embedobj.cxx:467
> #22 0x00007ffff2aa7f44 in SfxInPlaceClient::SetObjectState(int) (this=0x559d3c0, nState=1) at sfx2/source/view/ipclient.cxx:657
> #23 0x00007ffff2aa7924 in SfxInPlaceClient::SetObject(com::sun::star::uno::Reference<com::sun::star::embed::XEmbeddedObject> const&) (this=0x559d3c0, rObject=empty uno::Reference) at sfx2/source/view/ipclient.cxx:687
> #24 0x00007ffff2aa765e in SfxInPlaceClient::~SfxInPlaceClient() (this=0x559d3c0) at sfx2/source/view/ipclient.cxx:629
> #25 0x00007fffab383aa5 in SwOleClient::~SwOleClient() (this=0x559d3c0) at sw/inc/swcli.hxx:30
> #26 0x00007fffab383ac9 in SwOleClient::~SwOleClient() (this=0x559d3c0) at sw/inc/swcli.hxx:30
> #27 0x00007ffff2aec705 in SfxViewShell::DiscardClients_Impl() (this=0x5081e50) at sfx2/source/view/viewsh.cxx:1676
> #28 0x00007ffff2ab7f7d in SfxBaseController::dispose() (this=0x7fff740c7318) at sfx2/source/view/sfxbasecontroller.cxx:998
> #29 0x00007fffb3aa1a95 in (anonymous namespace)::Frame::setComponent(com::sun::star::uno::Reference<com::sun::star::awt::XWindow> const&, com::sun::star::uno::Reference<com::sun::star::frame::XController> const&) (this=0x7fffcdee8310, xComponentWindow=empty uno::Reference, xController=empty uno::Reference) at framework/source/services/frame.cxx:1586
> #30 0x00007fffb3aa453c in (anonymous namespace)::Frame::close(unsigned char) (this=0x7fffcdee8310, bDeliverOwnership=0 '\000') at framework/source/services/frame.cxx:1801
> #31 0x00007fffb3a90d25 in framework::Desktop::impl_closeFrames(bool) (this=0x7fffce0e26b0, bAllowUI=true) at framework/source/services/desktop.cxx:1698
> #32 0x00007fffb3a9028b in framework::Desktop::terminate() (this=0x7fffce0e26b0) at framework/source/services/desktop.cxx:230
> #33 0x00007fffb397662b in framework::CloseDispatcher::implts_terminateApplication() (this=0x7fffb0291db8) at framework/source/dispatch/closedispatcher.cxx:562
> #34 0x00007fffb397578d in framework::CloseDispatcher::impl_asyncCallback(LinkParamNone*) (this=0x7fffb0291db8) at framework/source/dispatch/closedispatcher.cxx:410
> #35 0x00007fffb3973e48 in framework::CloseDispatcher::LinkStubimpl_asyncCallback(void*, LinkParamNone*) (instance=0x7fffb0291db8, data=0x0) at framework/source/dispatch/closedispatcher.cxx:254
> #36 0x00007fffedd043f8 in Link<LinkParamNone*, void>::Call(LinkParamNone*) const (this=0x7765c68, data=0x0) at include/tools/link.hxx:84
> #37 0x00007fffee147198 in vcl::EventPoster::DoEvent_Impl(void*) (this=0x7765c60) at vcl/source/helper/evntpost.cxx:52
> #38 0x00007fffee147158 in vcl::EventPoster::LinkStubDoEvent_Impl(void*, void*) (instance=0x7765c60, data=0x0) at vcl/source/helper/evntpost.cxx:48
> #39 0x00007fffedc763f8 in Link<void*, void>::Call(void*) const (this=0x7778378, data=0x0) at include/tools/link.hxx:84
> #40 0x00007fffedc7361c in ImplHandleUserEvent(ImplSVEvent*) (pSVEvent=0x7778370) at vcl/source/window/winproc.cxx:1946
> #41 0x00007fffedc709f0 in ImplWindowFrameProc(vcl::Window*, SalEvent, void const*) (_pWindow=0x19c18c0, nEvent=SalEvent::UserEvent, pEvent=0x7778370) at vcl/source/window/winproc.cxx:2496
> #42 0x00007fffee32fa4e in SalFrame::CallCallback(SalEvent, void const*) const (this=0x19c22d0, nEvent=SalEvent::UserEvent, pEvent=0x7778370) at vcl/inc/salframe.hxx:280
> #43 0x00007fffee344608 in SalGenericDisplay::DispatchInternalEvent() (this=0x15e0c10) at vcl/unx/generic/app/gendisp.cxx:86
> #44 0x00007fffd2d8d7ea in GtkData::userEventFn(void*) (data=0x73e260) at vcl/unx/gtk3/gtk3gtkdata.cxx:823
> #45 0x00007fffd2d8d91b in call_userEventFn(void*) (data=0x73e260) at vcl/unx/gtk3/gtk3gtkdata.cxx:833
> #46 0x00007ffff5af86ba in g_main_context_dispatch (context=0x63a520) at gmain.c:3154
> #47 0x00007ffff5af86ba in g_main_context_dispatch (context=context@entry=0x63a520) at gmain.c:3769
> #48 0x00007ffff5af8a70 in g_main_context_iterate (context=context@entry=0x63a520, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3840
> #49 0x00007ffff5af8b1c in g_main_context_iteration (context=0x63a520, may_block=1) at gmain.c:3901
> #50 0x00007fffd2d8c404 in GtkData::Yield(bool, bool) (this=0x73e260, bWait=true, bHandleAllCurrentEvents=false) at vcl/unx/gtk3/gtk3gtkdata.cxx:479
> #51 0x00007fffd2d8fdd1 in GtkInstance::DoYield(bool, bool, unsigned long) (this=0x73e3c0, bWait=true, bHandleAllCurrentEvents=false, nReleased=0) at vcl/unx/gtk3/../gtk/gtkinst.cxx:423
> #52 0x00007fffee183d15 in ImplYield(bool, bool, unsigned long) (i_bWait=true, i_bAllEvents=false, nReleased=0) at vcl/source/app/svapp.cxx:504
> #53 0x00007fffee17ead8 in Application::Yield() () at vcl/source/app/svapp.cxx:551
> #54 0x00007fffee17ea5b in Application::Execute() () at vcl/source/app/svapp.cxx:468
> #55 0x00007ffff775e6f9 in desktop::Desktop::DoExecute() () at desktop/source/app/app.cxx:1367
> #56 0x00007ffff776084a in desktop::Desktop::Main() (this=0x7fffffffe1e8) at desktop/source/app/app.cxx:1694
> #57 0x00007fffee191199 in ImplSVMain() () at vcl/source/app/svmain.cxx:185
> #58 0x00007fffee192938 in SVMain() () at vcl/source/app/svmain.cxx:223
> #59 0x00007ffff77c876b in soffice_main() () at desktop/source/app/sofficemain.cxx:165
> #60 0x000000000040094d in sal_main () at desktop/source/app/main.c:48
> #61 0x0000000000400927 in main (argc=1, argv=0x7fffffffe528) at desktop/source/app/main.c:47
Comment 1 Stephan Bergmann 2016-10-25 07:30:45 UTC
(In reply to Stephan Bergmann from comment #0)
> With recent master, start LO to open the attached embedded-presentation.odt,
> double-click into the embedded presentation (so it becomes editable, the
> control panels around the document change from Writer to Impress), then
> "File - Exit LibreOffice" (and confirm "Don't Save" if necessary prior to <>
> "").

... if necessary prior to <https://cgit.freedesktop.org/libreoffice/core/commit/?id=59ec27f44630fe129a590ba4caf6998bb671ecb5> "Calculate size of embedded Impress document properly").
Comment 2 Commit Notification 2016-11-01 15:55:59 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=889b8102e0c296ca41a90dc34aeb0facc40735bd

tdf#103481 fixed SIGABRT in embedded presentation

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2016-11-08 08:46:00 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?