tdf#103481 fixed SIGABRT in embedded presentation

Change-Id: I51402aec953d58f92d8fe768bca0d2c2d1ce4474